changed name to Hydro Flows

--- a/plugins/flow_app/config.json
+++ b/plugins/flow_app/config.json
@@ -1,6 +1,6 @@
 ﻿[
 	{
-		"toolbarName": "Water Flow App",
+		"toolbarName": "Hydro Flows",
 		"dialogWidth": 625,
 		"dialogHeight": 700,
 		"WaterFALLService":"http://ec2-54-81-38-200.compute-1.amazonaws.com/wf_api/",
