--- a/plugins/flow_app/config.json
+++ b/plugins/flow_app/config.json
@@ -9,7 +9,7 @@
 		"ecochangePath":"http://ec2-54-81-38-200.compute-1.amazonaws.com/static/tnc/Final_Figs/",
 		"layers":{
 			"HUC8":{
-				"service":"http://50.18.215.52/arcgis/rest/services/Louisiana_Freshwater/Mississippi_Watersheds/MapServer/0",
+				"service":"http://cirrus-web-adapter-241060755.us-west-1.elb.amazonaws.com/arcgis/rest/services/FN_Mississippi/MS_Map_Layers/MapServer/3",
 				"displayName": "SUBBASIN",
 				"LayerID":"FlowAppHuc8Layer",
 				"legendName":"8 Digit Basins (HUC 8)",
