--- a/plugins/HydroFlow/config.json
+++ b/plugins/HydroFlow/config.json
@@ -3,13 +3,13 @@
 		"toolbarName": "Hydro Flows",
 		"dialogWidth": 625,
 		"dialogHeight": 700,
-		"WaterFALLService":"http://ec2-54-90-210-130.compute-1.amazonaws.com/wf_api/",
+		"WaterFALLService":"https://ec2-54-90-210-130.compute-1.amazonaws.com/wf_api/",
 		"infoGraphic":"plugins/HydroFlow/HydroFlows6_67x10.jpg",
-		"hydrographPath":"http://ec2-54-90-210-130.compute-1.amazonaws.com/static/tnc/Baseline_hydrographs_OCT2015/Baseline_hydrograph_",
-		"ecochangePath":"http://ec2-54-90-210-130.compute-1.amazonaws.com/static/tnc/Final_Figs/",
+		"hydrographPath":"https://ec2-54-90-210-130.compute-1.amazonaws.com/static/tnc/Baseline_hydrographs_OCT2015/Baseline_hydrograph_",
+		"ecochangePath":"https://ec2-54-90-210-130.compute-1.amazonaws.com/static/tnc/Final_Figs/",
 		"layers":{
 			"HUC8":{
-				"service":"http://cirrus-web-adapter-241060755.us-west-1.elb.amazonaws.com/arcgis/rest/services/FN_Mississippi/MS_Map_Layers_2/MapServer/4",
+				"service":"https://cirrus-web-adapter-241060755.us-west-1.elb.amazonaws.com/arcgis/rest/services/FN_Mississippi/MS_Map_Layers_2/MapServer/4",
 				"displayName": "SUBBASIN",
 				"LayerID":"FlowAppHuc8Layer",
 				"legendName":"8 Digit Basins (HUC 8)",
@@ -27,7 +27,7 @@
 				}
 			},
 			"HUC12":{
-				"service":"http://cirrus-web-adapter-241060755.us-west-1.elb.amazonaws.com/arcgis/rest/services/FN_Louisiana/RTI/MapServer/5",
+				"service":"https://cirrus-web-adapter-241060755.us-west-1.elb.amazonaws.com/arcgis/rest/services/FN_Louisiana/RTI/MapServer/5",
 				"displayName": "SingleMetrics.huc12_name",
 				"basinID":"MS_HUC12.HUC12",
 				"LayerID": "FlowAppHuc12Layer",
@@ -47,7 +47,7 @@
                 }
 			},
 			"NavigationResults":{
-				"service":"http://cirrus-web-adapter-241060755.us-west-1.elb.amazonaws.com/arcgis/rest/services/FN_Louisiana/RTI/MapServer/5",
+				"service":"https://cirrus-web-adapter-241060755.us-west-1.elb.amazonaws.com/arcgis/rest/services/FN_Louisiana/RTI/MapServer/5",
 				"displayName": "SingleMetrics.huc12_name",
 				"basinID":"MS_HUC12.HUC12",						
 				"LayerID":"FlowAppNavResults",
@@ -66,7 +66,7 @@
                 }
 			},
 			"Catchments":{
-				"service":"http://cirrus-web-adapter-241060755.us-west-1.elb.amazonaws.com/arcgis/rest/services/FN_Louisiana/RTI/MapServer/6",
+				"service":"https://cirrus-web-adapter-241060755.us-west-1.elb.amazonaws.com/arcgis/rest/services/FN_Louisiana/RTI/MapServer/6",
 				"displayName": "featureid",
 				"basinID":"WBD_HUC12",
 				"LayerID": "FlowAppCatchments",
@@ -84,12 +84,12 @@
                 }
 			},
 			"StreamsLowRes":{
-				"service":"http://cirrus-web-adapter-241060755.us-west-1.elb.amazonaws.com/arcgis/rest/services/FN_Louisiana/RTI/MapServer/2",
+				"service":"https://cirrus-web-adapter-241060755.us-west-1.elb.amazonaws.com/arcgis/rest/services/FN_Louisiana/RTI/MapServer/2",
 				"LayerID": "FlowAppStreamsLowRes",
 				"legendName":"Streams"
 			},
 			"StreamsMedRes":{
-				"service":"http://cirrus-web-adapter-241060755.us-west-1.elb.amazonaws.com/arcgis/rest/services/FN_Louisiana/RTI/MapServer/3",
+				"service":"https://cirrus-web-adapter-241060755.us-west-1.elb.amazonaws.com/arcgis/rest/services/FN_Louisiana/RTI/MapServer/3",
 				"LayerID": "FlowAppStreamsMedRes",
 				"legendName":"Streams"
 			}
