--- a/plugins/feature_compare/compare_config.json
+++ b/plugins/feature_compare/compare_config.json
@@ -5,7 +5,7 @@
     "layers": [
         {
             "name": "HUC 8",
-            "url": "https://cirrus-web-adapter-241060755.us-west-1.elb.amazonaws.com/arcgis/rest/services/FN_Mississippi/MS_Map_Layers_2/MapServer/4",
+            "url": "https://cirrus.tnc.org/arcgis/rest/services/FN_Mississippi/MS_Map_Layers_2/MapServer/4",
             "mapDisplayAttribute": "SUBBASIN",
             "attrs": [
                 {"name": "SUBBASIN", "format": "text", "maxLength": 32},
@@ -20,7 +20,7 @@
         },
         {
             "name": "HUC 12",
-            "url": "https://cirrus-web-adapter-241060755.us-west-1.elb.amazonaws.com/arcgis/rest/services/FN_Mississippi/MS_Map_Layers_2/MapServer/5",
+            "url": "https://cirrus.tnc.org/arcgis/rest/services/FN_Mississippi/MS_Map_Layers_2/MapServer/5",
             "mapDisplayAttribute": "SUBWATERSHED",
             "attrs": [
                 {"name": "SUBWATERSHED", "format": "text", "maxLength": 80},
@@ -35,7 +35,7 @@
         },
 		{
             "name": "Counties",
-            "url": "https://cirrus-web-adapter-241060755.us-west-1.elb.amazonaws.com/arcgis/rest/services/FN_Mississippi/MS_Map_Layers_2/MapServer/8",
+            "url": "https://cirrus.tnc.org/arcgis/rest/services/FN_Mississippi/MS_Map_Layers_2/MapServer/8",
             "mapDisplayAttribute": "County",
             "attrs": [
                 {"name": "County", "format": "text", "maxLength": 32},
@@ -50,7 +50,7 @@
         },
 		{
             "name": "Congressional Districts",
-            "url": "https://cirrus-web-adapter-241060755.us-west-1.elb.amazonaws.com/arcgis/rest/services/FN_Mississippi/MS_Map_Layers_2/MapServer/9",
+            "url": "https://cirrus.tnc.org/arcgis/rest/services/FN_Mississippi/MS_Map_Layers_2/MapServer/9",
             "mapDisplayAttribute": "DISTRICT",
             "attrs": [
                 {"name": "DISTRICT", "format": "text", "maxLength": 32},
